# rust-collaborative-editor

./: .gitignore  Cargo.toml  readme.md
editor_client/: Cargo.toml
editor_client/src/: app_state.rs  client_state.rs  event.rs  main.rs  server_listener.rs  ui.rs
editor_protocol/: Cargo.toml
editor_protocol/src/: lib.rs
editor_server/: Cargo.toml
editor_server/src/: client_handler.rs  document_manager.rs  main.rs
